objects/SDOC__SDRelationship__c.object
<CustomObject>
    <description>S-Doc: Junction object that allows S-Docs to be related to multiple Salesforce objects</description>
    <fields>
        <fullName>SDOC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Created__c</fullName>
        <formula>SDOC__SDoc__r.CreatedBy.FirstName +&apos; &apos; + SDOC__SDoc__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Comment__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Created_On__c</fullName>
        <formula>SDOC__SDoc__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Name__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Number__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot;+ Id
,SDOC__SDoc__r.SDOC__Document_Number__c
,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Status__c</fullName>
        <formula>TEXT(SDOC__SDoc__r.SDOC__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Type__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Email_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Link__c</fullName>
        <label>Doc Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Status__c</fullName>
        <label>Doc Link Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linked to Google Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linked to Attachment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Client Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Pending Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc__c</fullName>
        <label>SDoc</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipLabel>SDoc</relationshipLabel>
        <relationshipName>SDoc</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDOC__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Upload__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Upload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__View_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__View_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>SDoc Relationship</label>
    <nameField>
        <displayFormat>SDR-{000}</displayFormat>
        <label>Sdoc Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SDOC__GD_Link</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(SDOC__SDoc_Rel_GD_Status__c, &apos;Linked to Google Doc&apos;)
, 
ISBLANK( SDOC__SDoc_Rel_GD_Link__c ) 
)</errorConditionFormula>
        <errorMessage>Before you are able to manually set the Docs Status to &quot;Linked to Google Doc&quot;, you must first enter a valid URL to an existing Google Doc in the Google Docs Link field.</errorMessage>
    </validationRules>
</CustomObject>